--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -21,8 +21,16 @@ body,
   text-align: center;
 }
 
+/* english font */
 .english {
   font-family: 'Courgette', cursive;
+  font-weight: bold;
+}
+
+/* hebrew font */
+.he {
+  font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif;
+  font-weight: bold;
 }
 
 .row {
@@ -56,24 +64,19 @@ textarea {
   color: #b99769;
   padding: 35px 0;
   font-weight: bold;
-}
-
-.section-header span {
-  font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif;
+  display: grid;
+  width: fit-content;
+  align-items: center;
+  text-align: center;
+  grid-template-columns: minmax(30px, 1fr) auto minmax(30px, 1fr);
+  grid-gap: 20px;
+  margin: 0 auto;
 }
 
 .line-on-sides:before,
 .line-on-sides:after {
   content: '';
-  display: inline-block;
-  width: 4%;
-  margin: 0 0.3em 0 -45%;
-  vertical-align: middle;
-  border-bottom: 2px solid;
-}
-
-.line-on-sides:after {
-  margin: 0 -45% 0 0.3em;
+  border-top: 2px solid;
 }
 
 .page-main-inner {
@@ -102,6 +105,16 @@ textarea {
     font-size: 30px;
   }
 }
+
+/* @media (max-width: 767px) {
+  .h1-seperator {
+    display: none;
+  }
+
+  .section-header {
+    grid-gap: 10px;
+  }
+} */
 
 /* @media (max-width: 767px) {
   .navbar-nav li a {
